--- a/PS4_Cheater/PS4_Cheater.csproj
+++ b/PS4_Cheater/PS4_Cheater.csproj
@@ -163,6 +163,9 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\search.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
